feat: complete integration skeleton for RIS PACS EMR
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>